--- a/Pandas_Basics.ipynb
+++ b/Pandas_Basics.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/YetAnotherApoorva/Python-Learning/blob/main/Pandas_Basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -47,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "BD8s_X_9ZcfD"
       },
@@ -85,7 +96,7 @@
       "metadata": {
         "id": "j8COaj7baVs6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +123,7 @@
         "id": "nFzG_9Lgb_5K",
         "outputId": "6716cdd3-afda-404c-a405-c10a3fc080ee"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +492,7 @@
         "id": "8-jcrwtRf2LF",
         "outputId": "b88b7b73-a61d-46da-feaf-252437a9835e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +811,7 @@
         "id": "svfP2TeZf6AF",
         "outputId": "e81156f4-1b15-4f86-d777-d6d65d8b1474"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,7 +846,7 @@
         "id": "0RuSA-cYh22U",
         "outputId": "b490e8d4-5e02-454d-c833-42cdc9ad8761"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -886,7 +897,7 @@
         "id": "KfK_h77viEsH",
         "outputId": "5ba4a247-caaf-487f-d348-a4cf0b03647c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1254,7 +1265,7 @@
         "id": "xkDgsPiJlYKb",
         "outputId": "0462e8e2-0dbf-4668-f849-ad67e7f67f9c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1732,7 +1743,7 @@
         "id": "ew2J-_sXuG3D",
         "outputId": "4e430821-e13d-4dda-b1b8-2c82aa75f220"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2035,7 +2046,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Value_counts"
+        "## Value counts"
       ],
       "metadata": {
         "id": "0xQCtZ3nMe4A"
@@ -2053,7 +2064,7 @@
         "id": "7PwVzUPKv4kD",
         "outputId": "e0664b12-fe4c-4ca2-ca71-abdeebfd6823"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2082,7 +2093,7 @@
         "id": "ZH2sRh_ZB9H8",
         "outputId": "2d1312f0-9f19-4806-9b6f-411340d7f6a2"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2129,7 +2140,7 @@
         "id": "y7KgnErZCjvR",
         "outputId": "09d7419d-5f47-443d-9077-dff0101fe43b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2493,7 +2504,7 @@
         "id": "4VcOItR7DMmW",
         "outputId": "ee597c61-e87a-48fe-d5ad-46977f4a42b5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2864,7 +2875,7 @@
         "id": "H8Oc4z9PDmBr",
         "outputId": "89edc92d-cafd-49dc-b086-d7e252d26e1a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2903,7 +2914,7 @@
         "id": "eKkfS-71D5CX",
         "outputId": "8ffa1969-89cd-4708-9fa0-d6ade81efb15"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3267,7 +3278,7 @@
         "id": "9TULbT6_EV5W",
         "outputId": "13873de6-e21a-4b8d-d351-f5f9deec8239"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3293,7 +3304,7 @@
         "id": "dgs8bq6SE8j9",
         "outputId": "4acb5a09-70c0-4be6-a2f0-91d139089e6c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
